# aoc-2024

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: main.rs
src/day-1/: README.md  historian-hysteria.rs
src/day-10/: README.md  hoof-it.rs
src/day-11/: README.md  plutonian-pebbles.rs
src/day-12/: README.md  garden-groups.rs
src/day-13/: README.md  claw-contraption.rs
src/day-14/: README.md  restroom-redoubt.rs
src/day-15/: README.md  warehouse-woes.rs
src/day-16/: README.md  reindeer-maze.rs
src/day-17/: README.md  chronospatial-computer.rs
src/day-18/: README.md  ram-run.rs
src/day-19/: README.md  linen-layout.rs
src/day-2/: README.md  red-nosed-reports.rs
src/day-20/: README.md  race-condition.rs
src/day-21/: README.md  keypad-conundrum.rs
src/day-22/: README.md  monkey-market.rs
src/day-23/: README.md  lan-party.rs
src/day-24/: README.md  crossed-wires.rs
src/day-25/: README.md  code-chronicle.rs
src/day-3/: README.md  mull-it-over.rs
src/day-4/: README.md  ceres-search.rs
src/day-5/: README.md  print-queue.rs
src/day-6/: README.md  guard-gallivant.rs
src/day-7/: README.md  bridge-repair.rs
src/day-8/: README.md  resonant-collinearity.rs
src/day-9/: README.md  disk-fragmenter.rs
