[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "historian-hysteria"
path = "src/day-1/historian-hysteria.rs"

[[bin]]
name = "red-nosed-reports"
path = "src/day-2/red-nosed-reports.rs"

[[bin]]
name = "mull-it-over"
path = "src/day-3/mull-it-over.rs"

[[bin]]
name = "ceres-search"
path = "src/day-4/ceres-search.rs"

[[bin]]
name = "print-queue"
path = "src/day-5/print-queue.rs"

[[bin]]
name = "guard-gallivant"
path = "src/day-6/guard-gallivant.rs"
