[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
num = "0.4.3"
itertools = "0.13.0"

[[bin]]
name = "historian-hysteria"
path = "src/day-1/historian-hysteria.rs"

[[bin]]
name = "red-nosed-reports"
path = "src/day-2/red-nosed-reports.rs"

[[bin]]
name = "mull-it-over"
path = "src/day-3/mull-it-over.rs"

[[bin]]
name = "ceres-search"
path = "src/day-4/ceres-search.rs"

[[bin]]
name = "print-queue"
path = "src/day-5/print-queue.rs"

[[bin]]
name = "guard-gallivant"
path = "src/day-6/guard-gallivant.rs"

[[bin]]
name = "bridge-repair"
path = "src/day-7/bridge-repair.rs"

[[bin]]
name = "resonant-collinearity"
path = "src/day-8/resonant-collinearity.rs"

[[bin]]
name = "disk-fragmenter"
path = "src/day-9/disk-fragmenter.rs"

[[bin]]
name = "hoof-it"
path = "src/day-10/hoof-it.rs"

[[bin]]
name = "plutonian-pebbles"
path = "src/day-11/plutonian-pebbles.rs"

[[bin]]
name = "garden-groups"
path = "src/day-12/garden-groups.rs"

[[bin]]
name = "claw-contraption"
path = "src/day-13/claw-contraption.rs"

[[bin]]
name = "restroom-redoubt"
path = "src/day-14/restroom-redoubt.rs"

[[bin]]
name = "warehouse-woes"
path = "src/day-15/warehouse-woes.rs"

[[bin]]
name = "reindeer-maze"
path = "src/day-16/reindeer-maze.rs"

[[bin]]
name = "chronospatial-computer"
path = "src/day-17/chronospatial-computer.rs"

[[bin]]
name = "ram-run"
path = "src/day-18/ram-run.rs"

[[bin]]
name = "linen-layout"
path = "src/day-19/linen-layout.rs"

[[bin]]
name = "race-condition"
path = "src/day-20/race-condition.rs"

[[bin]]
name = "keypad-conundrum"
path = "src/day-21/keypad-conundrum.rs"

[[bin]]
name = "monkey-market"
path = "src/day-22/monkey-market.rs"

[[bin]]
name = "lan-party"
path = "src/day-23/lan-party.rs"
